# tool_course-scheduling

./: .gitignore  .pre-commit-config.yaml  Makefile  New_Course_Scheduling_Analysis.ipynb  README.md  pyproject.toml
cs/: app.py  excel2db.py  main.py
cs/analytics/: assignmentsPerFaculty.py  courseEnrollmentHealth.py  courseSchedule.py  enrollmentByCourseLevel.py  inTroubleCourses.py  instructorAssignments.py  onlineCourseSchedule.py  parameterizedCourseSchedule.py  scheduleDensity.py  schoolCreditHours.py  showCoursesByNumber.py  teachingDistributionByWeightedEnrollment.py  zeroEnrollment.py
cs/api/: __init__.py  excel.py
cs/utils/: analytic.py
proj/: excel2db.py  main.py
proj/analytics/: assignmentsPerFaculty.py  courseEnrollmentHealth.py  courseSchedule.py  enrollmentByCourseLevel.py  inTroubleCourses.py  instructorAssignments.py  onlineCourseSchedule.py  scheduleDensity.py  showCoursesByNumber.py  teachingDistributionByWeightedEnrollment.py
proj/utils/: __init__.py
src/: app.py  button_analytics.py  excel2db.py  excelToDb.py  main.py  showCourseSchedule.py  upload-sheet.py
src-docs/: src.analytics.assignmentsPerFaculty.rst  src.analytics.courseEnrollmentHealth.rst  src.analytics.courseSchedule.rst  src.analytics.enrollmentByCourseLevel.rst  src.analytics.inTroubleCourses.rst  src.analytics.instructorAssignments.rst  src.analytics.onlineCourseSchedule.rst  src.analytics.rst  src.analytics.scheduleDensity.rst  src.analytics.showCoursesByNumber.rst  src.analytics.teachingDistributionByWeightedEnrollment.rst  src.excel2db.rst  src.rst  src.utils.analytic.rst  src.utils.rst
src/analytics/: assignmentsPerFaculty.py  courseEnrollmentHealth.py  courseSchedule.py  enrollmentByCourseLevel.py  inTroubleCourses.py  instructorAssignments.py  onlineCourseSchedule.py  parameterizedCourseSchedule.py  scheduleDensity.py  schoolCreditHours.py  showCoursesByNumber.py  teachingDistributionByWeightedEnrollment.py  zeroEnrollment.py
src/utils/: __init__.py  analytic.py
