[project]
name = "cs"
version = "0.1.0"
description = "Loyola University Chicago (LUC) Course Scheduling (CS) Utility"
authors = [{ name = "Nicholas M. Synovic", email = "nicholas.synovic@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
keywords = [
    "Education",
    "Course Scheduling",
    "Computer Science",
    "Open Source"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities"
]
dependencies = [
    "intervaltree>=3.1.0,<4",
    "pandas>=2.2.2,<3",
    "numpy>=2.0.0,<3",
    "matplotlib>=3.9.0,<4",
    "seaborn>=0.13.2,<0.14",
    "plotly>=5.22.0,<6",
    "streamlit>=1.36.0,<2",
    "openpyxl>=3.1.5,<4",
    "sphinx>=7.3.7,<8",
    "pydantic>=2.11.7",
]

[project.urls]
Homepage = "https://github.com/NicholasSynovic/luc-cs"
Repository = "https://github.com/NicholasSynovic/luc-cs"

[project.scripts]
luc-cs = "cs.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
